fix(flex in ie 10): footer align content

--- a/style/style.css
+++ b/style/style.css
@@ -12,7 +12,8 @@ body, html{
 	display: -ms-flexbox;
 	display: flex;	
 	width: 100%;
-	height: 95%;		
+	height: 95%;
+	min-height: 640px;		
 	
 }
 button{
@@ -42,7 +43,7 @@ button:hover{
     background-color: white;
 }
 .left-panel.show{
-	width: 25%;
+	width: 20%;
 }
 .left-panel.show menu{
 	visibility: visible;
@@ -58,6 +59,7 @@ menu{
 	visibility: hidden;
 	width: 70%;
 	min-width: 180px;
+	max-width: 280px;
 	padding: 30% 0 0 0;
 	margin: 0 auto;
 	height: 100%;
@@ -149,6 +151,7 @@ input[type="submit"]{
 	right: 0;
 	top:0;
 	height: 95%;
+	min-height: 640px;
 	width: 0;
 	transition: 0.5s linear;
 }
@@ -234,6 +237,10 @@ input.custom{
 	width: 100%;
 	background: #0a0b0d;
 	height: 100%;
+	transition: .5s;
+}
+.dashboard.small{
+	width: 80%;
 }
 table{
 	table-layout: fixed;
@@ -291,7 +298,10 @@ table td{
 
 footer{
 	display: flex;
+	display: -ms-flexbox;
+	-ms-flex-pack: center;
 	justify-content: center;
+	-ms-flex-align: center;
 	align-items: center;
 	height: 5%;
 	background: #e67817;
